Fixing bootstrap weirdness
*theTop has whitespace between it and the headshot
*attempt to fix

--- a/CSS/styling.css
+++ b/CSS/styling.css
@@ -6,6 +6,7 @@
   left: 24.1%;
   width:75.9%;
   overflow:hidden;
+  float:left;
 }
 
 /*the text on the banner with my name on it*/
